[gd_scene load_steps=7 format=3 uid="uid://b1vi4pir538xp"]

[ext_resource type="Script" uid="uid://7tglx0hujq2n" path="res://microgames/mg01_ignore_the_expert/MicrogameIgnoreTheExpert.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://ffm7buhs0lu4" path="res://microgames/mg01_ignore_the_expert/assets/ronald.png" id="2"]
[ext_resource type="Texture2D" uid="uid://basfijugg8pgy" path="res://microgames/mg01_ignore_the_expert/assets/expert.png" id="3"]
[ext_resource type="Texture2D" uid="uid://6vsqimk2peyb" path="res://microgames/mg01_ignore_the_expert/assets/speech_bubble.png" id="4"]
[ext_resource type="Texture2D" uid="uid://cnywa3348rlu" path="res://microgames/mg01_ignore_the_expert/assets/bar_frame.png" id="5"]
[ext_resource type="Texture2D" uid="uid://c7ddd0l1n2s2h" path="res://microgames/mg01_ignore_the_expert/assets/bar_fill.png" id="6"]

[node name="MicrogameIgnoreTheExpert" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.12, 0.12, 0.12, 1)

[node name="Characters" type="Node2D" parent="."]

[node name="Ronald" type="Sprite2D" parent="Characters"]
z_index = 1
position = Vector2(220, 420)
scale = Vector2(0.3, 0.3)
texture = ExtResource("2")

[node name="Expert" type="Sprite2D" parent="Characters"]
position = Vector2(850, 420)
scale = Vector2(0.28, 0.28)
texture = ExtResource("3")

[node name="UI" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="AdviceProgress" type="Control" parent="UI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -400.0
offset_top = 20.0
offset_right = 400.0
offset_bottom = 48.0
grow_horizontal = 2
mouse_filter = 2

[node name="BarFrame" type="TextureRect" parent="UI/AdviceProgress"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5")
expand_mode = 1

[node name="BarFill" type="TextureRect" parent="UI/AdviceProgress"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 2.0
offset_right = 798.0
offset_bottom = -2.0
grow_vertical = 2
texture = ExtResource("6")
expand_mode = 1

[node name="ExpertBubble" type="NinePatchRect" parent="UI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.55
anchor_top = 0.28
anchor_right = 0.55
anchor_bottom = 0.28
offset_left = -200.0
offset_top = -90.0
offset_right = 200.0
offset_bottom = 90.0
texture = ExtResource("4")
patch_margin_left = 48
patch_margin_top = 48
patch_margin_right = 48
patch_margin_bottom = 48

[node name="MarginContainer" type="MarginContainer" parent="UI/ExpertBubble"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="ExpertText" type="Label" parent="UI/ExpertBubble/MarginContainer"]
layout_mode = 2
vertical_alignment = 1
autowrap_mode = 3
clip_text = true

[node name="DebugState" type="Label" parent="UI"]
visible = false
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -120.0
offset_right = 320.0
offset_bottom = -20.0
grow_horizontal = 2
text = "State:"

[node name="Audio" type="Node" parent="."]

[node name="SFX_Talk" type="AudioStreamPlayer" parent="Audio"]

[node name="SFX_Cutoff" type="AudioStreamPlayer" parent="Audio"]

[node name="SFX_Success" type="AudioStreamPlayer" parent="Audio"]

[node name="SFX_Fail" type="AudioStreamPlayer" parent="Audio"]
